dsl: extract open-end wiring into GraphCursor
WorkflowBuilder mixed the fluent DSL with the graph-wiring mechanics
(the open-end tracking, the startSink strategy, and attach/openAt/
wireOpenEndsTo/wire). Pull that into a package-private GraphCursor that
owns the open-end set and knows how a stream's first node is reported —
the root reports the graph entry (pipeline::startAt), a branch captures
its start for the parent to wire.

Open ends are held as a single List<OpenEnd> — an OpenEnd(node, edge)
record — instead of two parallel node/edge arrays that had to be kept in
lock-step. The Edge enum is fully encapsulated in GraphCursor; the
builder composes over intention-revealing methods (attach/openAtNext/
openAtAlt/wireTrue/wireFalse/routeInto/absorb/clearOpenEnds/
addOpenEndAlt) and root()/branch() factories make the root-vs-sub
distinction explicit.

Pure refactor — no behavior change; also dropped the now-unused
pipeline() accessor. Full suite green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TaXmp5hT2eRgEgQNngcJd9